.choice <section> fix color contrast issues

--- a/style/_section1.scss
+++ b/style/_section1.scss
@@ -19,7 +19,8 @@
 
         p {
             font-size: .9rem;
-            color: $grayish-blue;
+            // color: $grayish-blue;
+            color: #50505E;
         }
     }
     
@@ -42,7 +43,8 @@
 
             p {
                 font-size: .9rem;
-                color: $grayish-blue;
+                // color: $grayish-blue;
+                color: #50505E;
             }
         }
     }
